# TestIDE

./: README.md  index.html  package-lock.json  package.json
src/: aiPanel.ts  aiProviders.ts  api.ts  contextMenu.ts  dialogs.ts  dom.ts  editor.ts  errors.ts  espLibrariesPanel.ts  fileIcons.ts  icons.ts  librariesPanel.ts  logView.ts  main.ts  newProjectModal.ts  resizer.ts  settings.ts  settingsModal.ts  sidebar.ts  store.ts  styles.css  terminal.ts  toast.ts  toolchainInstall.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_menu.rs  boards_watch.rs  esp_libraries.rs  idf.rs  lib.rs  libraries.rs  main.rs  monitor.rs  pio.rs  procstream.rs  project.rs  state.rs  stm32.rs  terminal.rs
