[package]
name = "testide"
version = "0.1.0"
description = "A PlatformIO / ESP-IDF focused IDE"
authors = ["TestIDE"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "testide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# `tauri dev` runs this binary directly (no .app bundle), so macOS shows
# whatever the executable is named in the Dock/menu bar. Name it explicitly
# to match productName instead of inheriting the package name's casing.
[[bin]]
name = "TestIDE"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21"
once_cell = "1"
portable-pty = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
